Increase right padding to prevent arrow from being cropped

--- a/client/src/styles/MovieSeriesCarousel.css
+++ b/client/src/styles/MovieSeriesCarousel.css
@@ -21,7 +21,7 @@
 .images-section-movies {
     display: flex; flex-flow: row;
     align-items: center;
-    width: 100%;
+    width: 100%; height: 100%;
 }
 
 #images-section-movies .slick-slider {
@@ -66,6 +66,14 @@
     .container-movies {
         padding: 30px 25px;
         padding-top: 0px;
-        padding-right: 0px;
+        padding-right: 10px;
+    }
+}
+
+@media (max-width: 650px) {
+    .container-movies {
+        padding: 30px 35px;
+        padding-top: 0px;
+        padding-right: 10px;
     }
 }
